--- a/index.html
+++ b/index.html
@@ -51,13 +51,7 @@
             <div class="about-grid">
                 <div class="grid">
                     <h3>Python Programming</h3>
-                    <p>Need help with Developing and Desgning things Lorem Ipsum is simply dummy text of the printing
-                        and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy
-                        text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book. It has
-                        survived not only five centuries, but also the leap into electronic
-                        typesetting, remaining essentially unchanged.
+                    <p>Python is a high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentation. Python is dynamically-typed and garbage-collected. It supports multiple programming paradigms, including structured, object-oriented and functional programming. 
                     </p>
 
                 </div>
@@ -65,25 +59,14 @@
                 <div class="grid">
                     <h3>Data Analysis and AI</h3>
                     <p>Need help with Developing and Desgning things Lorem Ipsum is simply dummy text of the printing
-                        and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy
-                        text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book. It has
-                        survived not only five centuries, but also the leap into electronic
-                        typesetting, remaining essentially unchanged.
+                        Artificial Intelligence and Data Analytics is the power to analyze and learn about large amounts of data from multiple sources and detect patterns to make future trend predictions. Business and industry benefits from predictive analytics to make decisions about production, marketing and development.
                     </p>
 
                 </div>
 
                 <div class="grid">
                     <h3>Web Development</h3>
-                    <p>Need help with Developing and Desgning things Lorem Ipsum is simply dummy text of the printing
-                        and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy
-                        text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book. It has
-                        survived not only five centuries, but also the leap into electronic
-                        typesetting, remaining essentially unchanged.
+                    <p>Full stack development is the end-to-end development of applications. It includes both the front end and back end of an application. The front end is usually accessed by a client, and the back end forms the core of the application where all the business logic is applied.
                     </p>
 
                 </div>
