--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1><span>P</span>ortfolio</h1>
                 <ul>
                     <a href="#"><li>About</li></a>
-                    <a href="#Experiences"><li>Projects</li></a>
+                    <a href="#Experiences"><li>Experience</li></a>
                     <a href="#Contact"><li>Contact</li></a>
                 </ul>
             </nav-bar>
@@ -108,7 +108,7 @@
 
         <h2 class="about">Previous Experience</h2>
 
-        <projects id="projects">
+        <projects id="Experiences">
 
             <div class="row">
                 <h3>TECH I S India Pvt Ltd (U.S based MNC)</h3>
