--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="btnn">
                         <a href="https://github.com/jiterockzz"><button>Github</button></a>
                         <a href="https://www.linkedin.com/in/jitendra-rathod-780914120/"><button>LinkedIn</button></a>
-                        <button class="btn"><i class="fa fa-download"></i> Download Resume</button>
+                        <button href=.resume23.pdf class="btn"><i class="fa fa-download"></i> Download Resume</button>
                     </div>
                 </div>
                 <div class="right-section">
