--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
 
                 <div class="grid">
                     <h3>Data Analysis and AI</h3>
-                    <p>Need help with Developing and Desgning things Lorem Ipsum is simply dummy text of the printing
-                        Artificial Intelligence and Data Analytics is the power to analyze and learn about large amounts of data from multiple sources and detect patterns to make future trend predictions. Business and industry benefits from predictive analytics to make decisions about production, marketing and development.
-                    </p>
+                    <p>Artificial Intelligence and Data Analytics is the power to analyze and learn about large amounts of data from multiple sources and detect patterns to make future trend predictions. Business and industry benefits from predictive analytics to make decisions about production, marketing and development.
 
                 </div>
 
