--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
     </main>
 
-    <footer id="contact">
+    <footer id="Contact">
         <div class="up">
             <h1> I look forward to hearing from you!!</h1>
             <h4>You can reach me at: jiterockzz@gmail.com</h4>
