--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <div class="btnn">
                         <a href="https://github.com/jiterockzz"><button>Github</button></a>
                         <a href="https://www.linkedin.com/in/jitendra-rathod-780914120/"><button>LinkedIn</button></a>
-                        <a href="./resume233.pdf"><button  class="btn"><i class="fa fa-download"></i> Download Resume</button></a>
+                        <a href="./resume233.pdf"><button  class="btn"><i class="fa fa-download"></i>Resume</button></a>
                     </div>
                 </div>
                 <div class="right-section">
