--- a/index.html
+++ b/index.html
@@ -25,15 +25,14 @@
             </nav-bar>
             <intro>
                 <div class="left-section">
-
-
-                    <h1>Hi, my name is Jitendra</h1>
+                    <h1 class="animate-character">Hello, my name is <span>Jitendra</span></h1>
                     <hr>
-                    <p style="text-align: center;font-style: italic;font-size: 3vw;font-weight: bolder;">An Innovative</p>
-                    <p>Data Scientist & Full Stack Web Developer</p>
+                    <p style="font-style: italic;font-size: 2vw;font-weight: bolder;">An Innovative</p>
+                    <p class="'animate-character">Data Scientist & Full Stack Web Developer</p>
                     <div class="btnn">
-                        <a href="https://github.com/jiterockzz"><button>Github</button></a>
-                        <a href="https://www.linkedin.com/in/jitendra-rathod-780914120/"><button>LinkedIn</button></a>
+                        
+                        <a href="https://github.com/jiterockzz"><button  class="btn">Github</button></a>
+                        <a href="https://www.linkedin.com/in/jitendra-rathod-780914120/"><button  class="btn">LinkedIn</button></a>
                         <a href="./resume233.pdf"><button  class="btn"><i class="fa fa-download"></i>Resume</button></a>
                     </div>
                 </div>
