--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <projects id="Experiences">
 
             <div class="row">
-                <h3>Zummit Infoabs</h3>
+                <h3>Zummit Infolabs</h3>
                 <p>
                     <strong>Duration : Oct 2021 - Feb 2022</strong><br>
                     <strong>Designation: Jr. Data Scientist (Intern) </strong><br>
