--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
         <h3>PG Program in <strong>“Data Science, Machine Learning & Neural Networks”</strong> <br> DataTrained
           Educations Pvt Ltd, Bangalore, Karnataka</h3>
         <h3>Issue Date – Sept 2020 <br>
-          Certificate Cred – eexrzr5icb</h3> <br>
+          Certificate Cred – eexrzr5icb</h3>
         <h3>Online Short-Term Course On <strong>“Data Analytics & Predictive Technologies”</strong> <br> I – DAPT Hub
-          Foundation, INDIAN INSTITUTE OF TECHNOLOGY (BHU), Varanasi</h3><br>
+          Foundation, INDIAN INSTITUTE OF TECHNOLOGY (BHU), Varanasi</h3>
         <h3>Issue Date - July 2021</h3>
-        <br>
+        
 
 
 
