resume_update_link

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           <p class="'animate-character">Data Scientist & Full Stack Web Developer</p>
           <div class="btnn">
 
-            <a href="https://github.com/jiterockzz"><button class="btn">Github</button></a>
+            <a href="https://github.com"><button class="btn">Github</button></a>
             <a href="https://www.linkedin.com/in/jitendra-rathod-780914120/"><button class="btn">LinkedIn</button></a>
-            <a href="./resume233.pdf"><button class="btn"><i class="fa fa-download"></i>Resume</button></a>
+            <a href="./resume23.pdf"><button class="btn"><i class="fa fa-download"></i>Resume</button></a>
           </div>
         </div>
         <div class="right-section">
@@ -309,11 +309,11 @@
         <h3>PG Program in <strong>“Data Science, Machine Learning & Neural Networks”</strong> <br> DataTrained
           Educations Pvt Ltd, Bangalore, Karnataka</h3>
         <h3>Issue Date – Sept 2020 <br>
-          Certificate Cred – eexrzr5icb</h3> <br>
+          Certificate Cred – eexrzr5icb</h3>
         <h3>Online Short-Term Course On <strong>“Data Analytics & Predictive Technologies”</strong> <br> I – DAPT Hub
-          Foundation, INDIAN INSTITUTE OF TECHNOLOGY (BHU), Varanasi</h3><br>
+          Foundation, INDIAN INSTITUTE OF TECHNOLOGY (BHU), Varanasi</h3>
         <h3>Issue Date - July 2021</h3>
-        <br>
+        
 
 
 
